tests/checker/diagnostics/0891_gadt_constructor_payload_int_mismatch_04.ml.infer.expected
File "0891_gadt_constructor_payload_int_mismatch_04.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0891_gadt_constructor_payload_int_mismatch_04 is not a valid module name.

File "0891_gadt_constructor_payload_int_mismatch_04.ml", line 5, characters 36-40:
5 | let _ : int expr_delta = EInt_delta true
                                        ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
